# iohk-purescript-challenge

./: README.md
client/: .gitignore  bower.json  package.json
client/site/: index.html  main.js
client/src/: Lib.purs  Main.purs
server/: .gitignore  LICENSE  server.cabal  stack.yaml
server/app/: Main.hs
server/bridge/: Main.hs
server/src/: Lib.hs  Sample.hs
