name:                server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rubenmoor/server#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Sample
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , servant-server
                     , text
                     , time
  default-language:    Haskell2010

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , server
                     , warp
  default-language:    Haskell2010

executable generate-ps-exe
  hs-source-dirs:      bridge
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , purescript-bridge
                     , server
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubenmoor/server
